More work on launcher